[CAMEL-20422] Move schema files to the META-INF/ directory